# prx-sd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rustfmt.toml  uninstall.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  sec-audit.yml
crates/cli/: Cargo.toml
crates/cli/src/: embedded_rules.rs  main.rs  output.rs
crates/cli/src/commands/: adblock.rs  community.rs  config.rs  daemon.rs  dns_proxy.rs  email_alert.rs  import.rs  import_clamav.rs  info.rs  integration.rs  memscan.rs  mod.rs  policy.rs  quarantine.rs  realtime.rs  report.rs  rootkit.rs  runtime.rs  scan.rs  scan_usb.rs  schedule.rs  self_update.rs  status.rs  update.rs  webhook.rs
crates/cli/tests/: cli_integration.rs  commands_smoke.rs
crates/core/: Cargo.toml
crates/core/benches/: scan_bench.rs
crates/core/src/: config.rs  engine.rs  lib.rs  magic.rs  memscan.rs  result.rs  rootkit.rs  scanner.rs  virustotal.rs
crates/core/tests/: clamav_import.rs  cross_behavior.rs  cross_detection.rs  cross_document_ext.rs  cross_engine_ext.rs  cross_false_positive.rs  cross_heuristic.rs  cross_heuristic_ext.rs  cross_multiengine.rs  cross_pipeline.rs  cross_security.rs  directory_scan.rs  eicar.rs  hash_import_scan.rs  heuristic_detection.rs  heuristic_elf_macho.rs  scan_mixed_threats.rs  scan_quarantine_chain.rs  yara_detection.rs
crates/heuristic/: Cargo.toml
crates/heuristic/src/: entropy.rs  lib.rs  ml_behavior.rs  ml_features.rs  ml_model.rs  packer.rs  scoring.rs  suspicious_api.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: archive.rs  elf.rs  lib.rs  macho.rs  office.rs  pdf.rs  pe.rs
crates/plugins/: Cargo.toml
crates/plugins/examples/example-plugin/: Cargo.toml  plugin.json
crates/plugins/examples/example-plugin/src/: lib.rs
crates/plugins/src/: host.rs  lib.rs  manifest.rs  registry.rs
crates/quarantine/: Cargo.toml
crates/quarantine/src/: lib.rs  restore.rs  vault.rs
crates/quarantine/tests/: quarantine_flow.rs  vault_crypto.rs
crates/realtime/: Cargo.toml  build.rs
crates/realtime/src/: adblock_filter.rs  behavior_monitor.rs  dns_filter.rs  dns_proxy.rs  event.rs  ioc_filter.rs  lib.rs  linux.rs  macos.rs  monitor.rs  notify_fallback.rs  protected_dirs.rs  ransomware.rs  registry_monitor.rs  url_scanner.rs  windows.rs
crates/realtime/src/bpf/: prxsd.bpf.c  prxsd.h  vmlinux.h
crates/realtime/src/ebpf/: actions.rs  correlate.rs  events.rs  loader.rs  metrics.rs  mod.rs  pipeline.rs  policy.rs  state.rs
crates/remediation/: Cargo.toml
crates/remediation/src/: actions.rs  audit.rs  common.rs  lib.rs  linux.rs  macos.rs  policy.rs  windows.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: anti_sandbox.rs  behavior.rs  enhanced.rs  lib.rs  macos.rs  windows.rs  yara_gen.rs
crates/sandbox/src/linux/: landlock.rs  mod.rs  namespace.rs  seccomp.rs  tracer.rs
crates/signatures/: Cargo.toml
crates/signatures/src/: clamav.rs  database.rs  hash.rs  lib.rs  yara.rs
crates/signatures/src/formats/: cvd.rs  hdb.rs  ldb.rs  mod.rs  ndb.rs
crates/updater/: Cargo.toml
crates/updater/src/: client.rs  delta.rs  lib.rs  verify.rs
crates/updater/src/community/: blocklist.rs  config.rs  enroll.rs  mod.rs  reporter.rs
docs/: ARCHITECTURE.md  BUILDING.md  CLI.md  EBPF_MVP_IMPLEMENTATION_PLAN.md  README.md
docs/ar/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/de/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/es/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/fr/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/ja/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/ka/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/ko/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/ru/: ARCHITECTURE.md  BUILDING.md  CLI.md
docs/zh/: ARCHITECTURE.md  BUILDING.md  CLI.md
drivers/windows-minifilter/: driver.c
drivers/windows-minifilter/ipc/: shared.h
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.vue
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs  tray.rs
gui/src/components/: AdblockSettings.vue  AlertHistory.vue  Badge.vue  Dashboard.vue  DragDropScan.vue  NavItem.vue
gui/src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  ja.ts  ka.ts  ko.ts  ru.ts  zh.ts
gui/src/pages/: MonitorPage.vue  QuarantinePage.vue  ScanPage.vue  SettingsPage.vue
gui/src/stores/: app.ts  tauri.ts
gui/src/types/: index.ts
packaging/appimage/: prx-sd.desktop
packaging/aur/: PKGBUILD
packaging/completions/: sd.bash  sd.fish  sd.zsh
packaging/desktop/: prx-sd.desktop
packaging/filemanager/dolphin/: prx-sd-scan.desktop
packaging/filemanager/nautilus/: prx-sd-scan
packaging/filemanager/nemo/: prx-sd-scan.nemo_action
packaging/filemanager/thunar/: README.md
packaging/homebrew/: prx-sd.rb
packaging/launchd/: com.prxsd.daemon.plist
packaging/rpm/: prx-sd.spec
packaging/scoop/: prx-sd.json
packaging/systemd/: prx-sd.service
packaging/udev/: 99-prx-sd-usb.rules
packaging/windows/: prx-sd.wxs
packaging/winget/: OpenPRX.PRX-SD.installer.yaml  OpenPRX.PRX-SD.locale.en-US.yaml  OpenPRX.PRX-SD.yaml
signatures-db/hashes/: md5_blocklist.txt
signatures-db/updates/: README.md
tests/cross-test/: Dockerfile.malware-gen  full-cross-test.sh  generate-advanced-samples.py  generate-samples.py  setup-test-env.sh
tests/cross-test/blocklists/: peter-lowe.txt
tests/cross-test/results/: bazaar_import.txt  bazaar_recent.txt  cross-debian-trixie-slim.json  cross-fedora-41.json  cross-ubuntu-24.04.json
tests/cross-test/samples/: clean.txt  macro.doc
tests/cross-test/samples/advanced/: doc_kitchen_sink.doc  (+9 more)
tests/cross-test/sd-data/: config.json
tests/cross-test/sd-data-cross/: config.json
tests/cross-test/sd-data-real/: config.json
tools/: build-appimage.sh  build-deb.sh  build-dmg.sh  build-msi.sh  update-signatures.sh
update-server/: Cargo.toml
update-server/src/: main.rs  routes.rs  signing.rs  storage.rs
(+3 files in other folders)
