[package]
name = "prx-sd-update-server"
version.workspace = true
edition.workspace = true

[dependencies]
prx-sd-signatures = { workspace = true }
prx-sd-updater = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
