[package]
name = "prx-sd-update-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prx-sd-updater = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
