[package]
name = "sd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sd"
path = "src/main.rs"

[dependencies]
prx-sd-core = { workspace = true }
prx-sd-signatures = { workspace = true }
prx-sd-quarantine = { workspace = true }
prx-sd-remediation = { workspace = true }
prx-sd-updater = { workspace = true }
prx-sd-realtime = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
lettre = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
sha2 = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true
