[package]
name = "prx-sd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prx-sd-signatures = { workspace = true }
prx-sd-parsers = { workspace = true }
prx-sd-heuristic = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
prx-sd-signatures = { workspace = true }
prx-sd-heuristic = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "scan_bench"
harness = false

[lints]
workspace = true
