[package]
name = "prx-sd-plugins"
version.workspace = true
edition.workspace = true

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmtime", "wasmtime-wasi"]

[dependencies]
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
