[package]
name = "prx-sd-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmtime", "wasmtime-wasi"]

[dependencies]
wasmtime = { version = "41", optional = true }
wasmtime-wasi = { version = "41", optional = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
