[package]
name = "prx-sd-quarantine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
sha2 = { workspace = true }

[lints]
workspace = true
