[package]
name = "prx-sd-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
adblock = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "poll"] }
libc = "0.2"
sha2 = { workspace = true }

[lints]
workspace = true
