[package]
name = "prx-sd-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prx-sd-core = { path = "../../crates/core" }
prx-sd-signatures = { path = "../../crates/signatures" }
prx-sd-quarantine = { path = "../../crates/quarantine" }
prx-sd-realtime = { path = "../../crates/realtime" }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
